# script_atendimento

./: ROTEIRO_SCRIPT.txt  main.py  pyproject.toml
