[project]
name = "script-atendimento"
version = "0.1.0"
description = ""
authors = [
    {name = "Paulo Roberto De Morais",email = "prmorais1302@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "selenium (>=4.38.0,<5.0.0)",
    "chromedrivermanager (>=0.0.1,<0.0.2)",
    "webdriver-manager (>=4.0.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
